# AnalyticalMisfitInterface

./: .gitignore  CMakeLists.txt  MisfitT_set.nb  MisfitT_set_low.nb  MisfitT_total.nb  README.md
src/: AnalyticalMisfitInterfaceBase.cpp  AnalyticalMisfitInterfaceBase.h  AnalyticalMisfitInterfaceCub.cpp  AnalyticalMisfitInterfaceCub.h  AnalyticalMisfitInterfaceHex.cpp  AnalyticalMisfitInterfaceHex.h  AnalyticalMisfitInterfaces.cpp  AnalyticalMisfitInterfaces.h  test_interface_cub_bx.cpp  test_interface_cub_bx_low.cpp  test_interface_cub_by.cpp  test_interface_cub_by_low.cpp  test_interface_cub_bz.cpp  test_interface_cub_bz_low.cpp  test_interface_hex_bx.cpp  test_interface_hex_bx_low.cpp  test_interface_hex_by.cpp  test_interface_hex_by_low.cpp  test_interface_hex_bz.cpp  test_interface_hex_bz_low.cpp  test_main.cpp  tests.cpp
tests/: CMakeLists.txt  mock_analytical_interface_base.h  test.cpp  test_analytical_interface_base_above.cpp  test_analytical_interface_base_above_bx.cpp  test_analytical_interface_base_above_by.cpp  test_analytical_interface_base_above_bz.cpp  test_analytical_interface_base_below_bx.cpp  test_analytical_interface_base_below_by.cpp  test_analytical_interface_base_below_bz.cpp  test_analytical_interface_cub_bx.cpp  test_analytical_interface_cub_by.cpp  test_analytical_interface_cub_bz.cpp  test_analytical_interface_hex_bx.cpp  test_analytical_interface_hex_by.cpp  test_analytical_interface_hex_bz.cpp
tests/Mathematica/: MisfitInterface_above.nb
